Fix align

--- a/Exercise/JQuery_Bootstrap/insert_col/style.css
+++ b/Exercise/JQuery_Bootstrap/insert_col/style.css
@@ -1,4 +1,5 @@
-table, th {
+table, 
+th {
   text-align: center;
 }
 
@@ -19,7 +20,8 @@ span {
   float: right;
 }
 
-.button-up:hover, .button-down:hover {
+.button-up:hover, 
+.button-down:hover {
   color: green;
 }
 
