--- a/Exercise/JQuery_Bootstrap/sort_2column/stylesheet.css
+++ b/Exercise/JQuery_Bootstrap/sort_2column/stylesheet.css
@@ -1,4 +1,5 @@
-table, th {
+table, 
+th {
   text-align: center;
 }
 
@@ -15,7 +16,8 @@ span {
   float: right;
 }
 
-.button-up:hover, .button-down:hover {
+.button-up:hover, 
+.button-down:hover {
   color: green;
 }
 
